--- a/config/crd/bases/smartlog.smart-tools.com_monitorpods.yaml
+++ b/config/crd/bases/smartlog.smart-tools.com_monitorpods.yaml
@@ -11,10 +11,32 @@ spec:
     kind: MonitorPod
     listKind: MonitorPodList
     plural: monitorpods
+    shortNames:
+    - mp
     singular: monitorpod
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - description: 表示 MonitorPod 配置是否就绪
+      jsonPath: .status.conditions[?(@.type=='Ready')].status
+      name: Ready
+      type: string
+    - description: 当前监控的 Pod 数量
+      jsonPath: .status.monitoredPodsCount
+      name: Monitored
+      type: integer
+    - description: 已发送的告警总数
+      jsonPath: .status.alertsSentCount
+      name: Alerts Sent
+      type: integer
+    - description: 最近一次告警时间
+      jsonPath: .status.lastTriggeredTime
+      name: Last Alert
+      type: date
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: MonitorPod is the Schema for the monitorpods API
@@ -39,13 +61,216 @@ spec:
           spec:
             description: spec defines the desired state of MonitorPod
             properties:
-              foo:
-                description: foo is an example field of MonitorPod. Edit monitorpod_types.go
-                  to remove/update
+              alertRecordTTL:
+                description: |-
+                  AlertRecordTTL 定义了创建的 AlertRecord 资源的存活时间 (Time-To-Live)。
+                  例如 "720h" (30天), "168h" (7天)。
+                  只有在 recordAlerts 为 true 时才有效。
                 type: string
+              alertTarget:
+                description: AlertTarget 定义发送告警的目标, 这个目标可以是 Alert 或者 AlertGroup
+                properties:
+                  kind:
+                    description: Kind 用于指定目标类型，可以是 "Alert" 或 "AlertGroup"
+                    enum:
+                    - Alert
+                    - AlertGroup
+                    type: string
+                  name:
+                    description: Name 用于指定目标名称
+                    type: string
+                required:
+                - kind
+                - name
+                type: object
+              alertTemplate:
+                description: AlertTemplate 告警模板
+                type: string
+              containerNames:
+                description: ContainerNames 用于过滤监控的容器
+                items:
+                  type: string
+                type: array
+              multiline:
+                description: Multiline 用于处理多行日志
+                properties:
+                  negate:
+                    description: |-
+                      Negate 控制 Pattern 的匹配行为。
+                      - false (默认): 匹配 Pattern 的行被视为【新事件的开始】。
+                      - true: 不匹配 Pattern 的行被视为【新事件的开始】。
+                    type: boolean
+                  pattern:
+                    description: |-
+                      Pattern 是一个正则表达式，用于标识一个日志行的归属。
+                      它通常用于匹配一个新日志事件的起始行。
+                    type: string
+                required:
+                - pattern
+                type: object
+              rateLimit:
+                description: RateLimit 用于限制发送的告警数量
+                properties:
+                  limit:
+                    description: Limit 用于指定限制的次数, 例如 10 表示一分钟内最多发送 10 条告警
+                    type: integer
+                  period:
+                    description: Period 用于指定限制的频率, 例如 "1m" 表示一分钟内最多发送一次
+                    type: string
+                required:
+                - limit
+                - period
+                type: object
+              recordAlerts:
+                description: |-
+                  RecordAlerts 控制是否为触发的告警创建 AlertRecord 资源。
+                  默认为 false。
+                type: boolean
+              rules:
+                description: Rules 定义需要匹配的日志行
+                items:
+                  properties:
+                    excludeRegex:
+                      description: ExcludeRegex 用于排除匹配的日志行
+                      type: string
+                    name:
+                      description: Name 用于指定规则名称
+                      type: string
+                    regex:
+                      description: Regex 用于匹配日志行
+                      type: string
+                  required:
+                  - name
+                  - regex
+                  type: object
+                type: array
+              selector:
+                description: Selector 用于选择要监控的 Pod
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: |-
+                        A label selector requirement is a selector that contains values, a key, and an operator that
+                        relates the key and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: |-
+                            operator represents a key's relationship to a set of values.
+                            Valid operators are In, NotIn, Exists and DoesNotExist.
+                          type: string
+                        values:
+                          description: |-
+                            values is an array of string values. If the operator is In or NotIn,
+                            the values array must be non-empty. If the operator is Exists or DoesNotExist,
+                            the values array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                          x-kubernetes-list-type: atomic
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                    x-kubernetes-list-type: atomic
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
+                      map is equivalent to an element of matchExpressions, whose key field is "key", the
+                      operator is "In", and the values array contains only "value". The requirements are ANDed.
+                    type: object
+                type: object
+                x-kubernetes-map-type: atomic
+            required:
+            - alertTarget
+            - rules
+            - selector
             type: object
           status:
             description: status defines the observed state of MonitorPod
+            properties:
+              alertsSentCount:
+                description: AlertSendCount 是已经发送的告警数量
+                format: int64
+                type: integer
+              conditions:
+                description: Conditions 是当前 Pod 的状态
+                items:
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
+                  properties:
+                    lastTransitionTime:
+                      description: |-
+                        lastTransitionTime is the last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                      format: date-time
+                      type: string
+                    message:
+                      description: |-
+                        message is a human readable message indicating details about the transition.
+                        This may be an empty string.
+                      maxLength: 32768
+                      type: string
+                    observedGeneration:
+                      description: |-
+                        observedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
+                      format: int64
+                      minimum: 0
+                      type: integer
+                    reason:
+                      description: |-
+                        reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                        Producers of specific condition types may define expected values and meanings for this field,
+                        and whether the values are considered a guaranteed API.
+                        The value should be a CamelCase string.
+                        This field may not be empty.
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                      type: string
+                    status:
+                      description: status of the condition, one of True, False, Unknown.
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - message
+                  - reason
+                  - status
+                  - type
+                  type: object
+                type: array
+              lastTriggeredTime:
+                description: LastTriggeredTime 是最近一次触发告警的时间
+                format: date-time
+                type: string
+              monitoredPods:
+                description: MonitoredPods 是当前正在被监控的 Pod 的列表
+                items:
+                  type: string
+                type: array
+              monitoredPodsCount:
+                description: MonitoredPodsCount 是当前正在被监控的 Pod 的数量
+                type: integer
             type: object
         required:
         - spec
