--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/smartlog.smart-tools.com_alerts.yaml
 - bases/smartlog.smart-tools.com_alertgroups.yaml
 - bases/smartlog.smart-tools.com_monitorpods.yaml
+- bases/smartlog.smart-tools.com_alertrecords.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
