update version is v0.0.3

--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -49,6 +49,7 @@ rules:
   - apiGroups:
       - smartlog.smart-tools.com
     resources:
+      - aiproviders
       - alertgroups
       - alerts
       - monitorpods
@@ -63,6 +64,7 @@ rules:
   - apiGroups:
       - smartlog.smart-tools.com
     resources:
+      - aiproviders/finalizers
       - alertgroups/finalizers
       - alerts/finalizers
       - monitorpods/finalizers
@@ -71,6 +73,7 @@ rules:
   - apiGroups:
       - smartlog.smart-tools.com
     resources:
+      - aiproviders/status
       - alertgroups/status
       - alerts/status
       - monitorpods/status
