--- a/deploy/crds.yaml
+++ b/deploy/crds.yaml
@@ -4,6 +4,208 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.18.0
+  name: aiproviders.smartlog.smart-tools.com
+spec:
+  group: smartlog.smart-tools.com
+  names:
+    kind: AIProvider
+    listKind: AIProviderList
+    plural: aiproviders
+    shortNames:
+      - aip
+    singular: aiprovider
+  scope: Namespaced
+  versions:
+    - additionalPrinterColumns:
+        - jsonPath: .status.conditions[?(@.type=='Ready')].status
+          name: Ready
+          type: string
+        - jsonPath: .spec.type
+          name: Type
+          type: string
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1alpha1
+      schema:
+        openAPIV3Schema:
+          description: AIProvider is the Schema for the aiproviders API
+          properties:
+            apiVersion:
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
+              type: string
+            kind:
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: spec defines the desired state of AIProvider
+              properties:
+                gemini:
+                  description: Gemini 定义了连接到 Google Gemini API 的配置。
+                  properties:
+                    apiKeySecretRef:
+                      description: APIKeySecretRef 引用一个包含 Gemini API Key 的 Secret。
+                      properties:
+                        key:
+                          description: The key of the secret to select from.  Must be
+                            a valid secret key.
+                          type: string
+                        name:
+                          default: ""
+                          description: |-
+                            Name of the referent.
+                            This field is effectively required, but due to backwards compatibility is
+                            allowed to be empty. Instances of this type with an empty value here are
+                            almost certainly wrong.
+                            More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          type: string
+                        optional:
+                          description: Specify whether the Secret or its key must be
+                            defined
+                          type: boolean
+                      required:
+                        - key
+                      type: object
+                      x-kubernetes-map-type: atomic
+                    baseURL:
+                      description: BaseURL (可选) 用于指定一个自定义的 Gemini API 端点地址，用于代理等场景。
+                      type: string
+                    model:
+                      description: Model (可选) 指定要使用的具体模型，默认为 "gemini-pro"。
+                      type: string
+                  required:
+                    - apiKeySecretRef
+                  type: object
+                openAI:
+                  description: OpenAI 定义了连接到 OpenAI API 的配置。
+                  properties:
+                    apiKeySecretRef:
+                      description: APIKeySecretRef 引用一个包含 OpenAI API Key 的 Secret。
+                      properties:
+                        key:
+                          description: The key of the secret to select from.  Must be
+                            a valid secret key.
+                          type: string
+                        name:
+                          default: ""
+                          description: |-
+                            Name of the referent.
+                            This field is effectively required, but due to backwards compatibility is
+                            allowed to be empty. Instances of this type with an empty value here are
+                            almost certainly wrong.
+                            More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          type: string
+                        optional:
+                          description: Specify whether the Secret or its key must be
+                            defined
+                          type: boolean
+                      required:
+                        - key
+                      type: object
+                      x-kubernetes-map-type: atomic
+                    baseURL:
+                      description: BaseURL (可选) 用于指定一个自定义的 OpenAI API 端点地址，用于代理等场景。
+                      type: string
+                    model:
+                      description: Model (可选) 指定要使用的具体模型，默认为 "gpt-3.5-turbo"。
+                      type: string
+                  required:
+                    - apiKeySecretRef
+                  type: object
+                type:
+                  description: Type 指定了 AI 提供商的类型。
+                  enum:
+                    - Gemini
+                    - OpenAI
+                  type: string
+              required:
+                - type
+              type: object
+            status:
+              description: status defines the observed state of AIProvider
+              properties:
+                conditions:
+                  description: Conditions 存储了资源的详细状态列表，例如 Ready 状态。
+                  items:
+                    description: Condition contains details for one aspect of the current
+                      state of this API Resource.
+                    properties:
+                      lastTransitionTime:
+                        description: |-
+                          lastTransitionTime is the last time the condition transitioned from one status to another.
+                          This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                        format: date-time
+                        type: string
+                      message:
+                        description: |-
+                          message is a human readable message indicating details about the transition.
+                          This may be an empty string.
+                        maxLength: 32768
+                        type: string
+                      observedGeneration:
+                        description: |-
+                          observedGeneration represents the .metadata.generation that the condition was set based upon.
+                          For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                          with respect to the current state of the instance.
+                        format: int64
+                        minimum: 0
+                        type: integer
+                      reason:
+                        description: |-
+                          reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                          Producers of specific condition types may define expected values and meanings for this field,
+                          and whether the values are considered a guaranteed API.
+                          The value should be a CamelCase string.
+                          This field may not be empty.
+                        maxLength: 1024
+                        minLength: 1
+                        pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                        type: string
+                      status:
+                        description: status of the condition, one of True, False, Unknown.
+                        enum:
+                          - "True"
+                          - "False"
+                          - Unknown
+                        type: string
+                      type:
+                        description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                        maxLength: 316
+                        pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                        type: string
+                    required:
+                      - lastTransitionTime
+                      - message
+                      - reason
+                      - status
+                      - type
+                    type: object
+                  type: array
+              type: object
+          required:
+            - spec
+          type: object
+      served: true
+      storage: true
+      subresources:
+        status: {}
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.18.0
   name: alertgroups.smartlog.smart-tools.com
 spec:
   group: smartlog.smart-tools.com
@@ -360,8 +562,6 @@ spec:
                         - key
                       type: object
                       x-kubernetes-map-type: atomic
-                  required:
-                    - urlSecretRef
                   type: object
                 type:
                   description: Type 指定了告警渠道的类型。
@@ -552,6 +752,26 @@ spec:
             spec:
               description: spec defines the desired state of MonitorPod
               properties:
+                aiEnrichment:
+                  description: AIEnrichment (可选) 用于配置 AI 对告警内容的丰富化处理
+                  properties:
+                    enabled:
+                      description: Enabled 用于启用 AI 对告警内容的丰富化处理。
+                      type: boolean
+                    prompt:
+                      description: Prompt 是一个 Go 模板字符串，用于构建发送给大语言模型的提示。
+                      type: string
+                    providerRef:
+                      description: ProviderRef 引用一个 AIProvider 资源。
+                      properties:
+                        name:
+                          description: Name 是 AIProvider 资源的名称。
+                          type: string
+                      type: object
+                    timeout:
+                      description: Timeout 用于设置大语言模型调用的超时时间。
+                      type: string
+                  type: object
                 alertRecordTTL:
                   description: |-
                     AlertRecordTTL 定义了创建的 AlertRecord 资源的存活时间 (Time-To-Live)。
@@ -570,9 +790,6 @@ spec:
                     name:
                       description: Name 用于指定目标名称
                       type: string
-                  required:
-                    - kind
-                    - name
                   type: object
                 alertTemplate:
                   description: AlertTemplate 告警模板
@@ -596,8 +813,6 @@ spec:
                         Pattern 是一个正则表达式，用于标识一个日志行的归属。
                         它通常用于匹配一个新日志事件的起始行。
                       type: string
-                  required:
-                    - pattern
                   type: object
                 rateLimit:
                   description: RateLimit 用于限制发送的告警数量
@@ -608,9 +823,6 @@ spec:
                     period:
                       description: Period 用于指定限制的频率, 例如 "1m" 表示一分钟内最多发送一次
                       type: string
-                  required:
-                    - limit
-                    - period
                   type: object
                 recordAlerts:
                   description: |-
@@ -630,9 +842,6 @@ spec:
                       regex:
                         description: Regex 用于匹配日志行
                         type: string
-                    required:
-                      - name
-                      - regex
                     type: object
                   type: array
                 selector:
@@ -681,10 +890,6 @@ spec:
                       type: object
                   type: object
                   x-kubernetes-map-type: atomic
-              required:
-                - alertTarget
-                - rules
-                - selector
               type: object
             status:
               description: status defines the observed state of MonitorPod
@@ -770,4 +975,3 @@ spec:
       storage: true
       subresources:
         status: {}
-
